--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,5 @@
 @import "normalize";
+@import "fonts";
 
 .container {
   margin: 0 auto;
@@ -6,8 +7,30 @@
   max-width: 1200px;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Inter";
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  color: #0a0a0a;
+}
+
 .header {
   padding: 33px 0 32px;
+  font-size: 24px;
+  line-height: 29px;
+  color: #717171;
   background-color: #0a0a0a;
 
   .nav {
@@ -20,11 +43,6 @@
 
       .menu-item {
         padding-right: 30px;
-
-        .menu-link {
-          text-decoration: none;
-          color: #717171;
-        }
       }
     }
   }
