--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -47,3 +47,11 @@ body {
     }
   }
 }
+
+.main {
+  .headline {
+    padding: 71px 0 40px;
+    text-align: center;
+    background-color: #f5f5f7;
+  }
+}
