--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -68,6 +68,13 @@ body {
 
     .headline-btn {
       display: inline-block;
+      border-radius: 30px;
+      padding: 22px 117px 19px 118px;
+      font-weight: 700;
+      font-size: 24px;
+      text-transform: uppercase;
+      color: #fff;
+      background-color: #490e84;
     }
   }
 }
