--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,235 +1,7 @@
 @import "normalize";
 @import "fonts";
-
-.container {
-  margin: 0 auto;
-  padding: 0 15px;
-  max-width: 1200px;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: "Inter";
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 18px;
-  color: #0a0a0a;
-}
-
-.header {
-  padding: 33px 0 32px;
-  font-size: 24px;
-  line-height: 29px;
-  color: #717171;
-  background-color: #0a0a0a;
-
-  .nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    .menu {
-      display: flex;
-      flex-grow: 1;
-      flex-basis: 0;
-
-      .menu-item {
-        padding-right: 30px;
-      }
-    }
-
-    .phone {
-      flex-grow: 1;
-      flex-basis: 0;
-      text-align: right;
-    }
-  }
-}
-
-.main {
-  .headline {
-    padding: 71px 0 40px;
-    text-align: center;
-    background-color: #f5f5f7;
-
-    .title {
-      margin: 0 0 40px;
-      font-weight: 700;
-      font-size: 64px;
-      text-transform: uppercase;
-      color: #490e84;
-    }
-
-    .headline-img {
-      margin-bottom: 25px;
-    }
-
-    .headline-btn {
-      display: inline-block;
-      border-radius: 30px;
-      padding: 22px 117px 19px 118px;
-      font-weight: 700;
-      font-size: 24px;
-      text-transform: uppercase;
-      color: #fff;
-      background-color: #490e84;
-    }
-  }
-
-  .new-title,
-  .color-title {
-    margin: 0 0 50px;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: normal;
-    text-align: center;
-    text-transform: uppercase;
-    color: #717171;
-  }
-
-  .new {
-    padding: 87px 0 150px;
-
-    .new-info {
-      display: flex;
-      align-items: center;
-
-      .new-text p {
-        margin: 0 0 30px;
-        max-width: 560px;
-      }
-
-      .new-text b {
-        display: block;
-        max-width: 560px;
-        font-size: 20px;
-        line-height: 130%;
-      }
-
-      .new-img {
-        margin-left: 191px;
-      }
-    }
-  }
-
-  .color {
-    padding-bottom: 150px;
-
-    .color-list {
-      display: flex;
-      justify-content: space-between;
-      text-align: center;
-
-      .color-item img {
-        margin-bottom: 20px;
-      }
-
-      .color-item h3 {
-        margin: 0 0 10px;
-        font-weight: 700;
-        font-size: 20px;
-        line-height: 130%;
-      }
-
-      .color-item p {
-        margin: 0;
-        line-height: 130%;
-      }
-    }
-  }
-
-  .contacts {
-    .contacts-inner {
-      display: flex;
-      color: #fff;
-      background-color: #574b63;
-
-      .contacts-form {
-        padding: 140px 93px;
-        width: 100%;
-        text-align: center;
-
-        .contacts-title {
-          margin: 0 0 62px;
-          font-weight: 700;
-          font-size: 32px;
-          line-height: normal;
-          text-align: left;
-          text-transform: uppercase;
-        }
-
-        .contacts-input {
-          display: block;
-          margin-bottom: 20px;
-          border: none;
-          border-bottom: 1px solid #f5f5f5;
-          padding: 10px 0;
-          width: 100%;
-          background-color: #574b63;
-        }
-
-        .contacts-input::placeholder {
-          font-family: "Inter";
-          font-weight: 400;
-          font-size: 14px;
-          line-height: 130%;
-          color: #fff;
-          opacity: 0.5;
-        }
-
-        p {
-          margin: 30px 0;
-          text-align: center;
-          opacity: 0.5;
-        }
-
-        button {
-          border: none;
-          border-radius: 30px;
-          padding: 16px 81px;
-          font-weight: 700;
-          line-height: 130%;
-          text-transform: uppercase;
-          color: #490e84;
-          background-color: #fff;
-          cursor: pointer;
-        }
-      }
-    }
-  }
-}
-
-.footer {
-  background-color: #0a0a0a;
-
-  .footer-inner {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 50px 0;
-    color: #717171;
-  }
-
-  .phone {
-    flex-grow: 1;
-    flex-basis: 0;
-    font-size: 24px;
-    line-height: normal;
-    text-align: right;
-  }
-
-  .footer-link {
-    flex-grow: 1;
-    flex-basis: 0;
-  }
-}
+@import "settings";
+@import "header";
+@import "main";
+@import "footer";
+@import "adaptive";
