--- a/src/styles/adaptive.scss
+++ b/src/styles/adaptive.scss
@@ -1,6 +1,32 @@
 @media (max-width: 1200px) {
-  .headline-img {
-    max-width: 100%;
+  .main {
+    .headline-img {
+      max-width: 100%;
+    }
+
+    .contacts {
+      background-color: #574b63;
+
+      .container {
+        .contacts-inner {
+          display: block;
+
+          .contacts-form {
+            width: auto;
+
+            .contacts-title {
+              font-size: 28px;
+              line-height: 32px;
+              text-align: center;
+            }
+          }
+
+          .contacts-img {
+            width: 100%;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -8,7 +34,10 @@
   .color {
     .container {
       .color-list {
+        flex-wrap: wrap;
+
         .color-item {
+          margin-bottom: 30px;
           width: 50%;
         }
       }
@@ -17,6 +46,100 @@
 }
 
 @media (max-width: 940px) {
+  .header {
+    .container {
+      .nav {
+        .menu {
+          position: absolute;
+          left: 0;
+          right: 0;
+          top: 0;
+          bottom: 0;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          transform: translateY(-100%);
+          background-color: #0a0a0a;
+
+          .menu-item {
+            padding: 50px 0;
+            font-size: 56px;
+          }
+        }
+
+        .logo,
+        .phone {
+          position: relative;
+          z-index: 50;
+        }
+
+        .menu-btn {
+          position: relative;
+          z-index: 50;
+          display: inline-block;
+          order: 1;
+          border: none;
+          width: 50px;
+          height: 50px;
+          background-color: transparent;
+          cursor: pointer;
+
+          .btn-line {
+            position: absolute;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background-color: #fff;
+            transition: 0.3s ease;
+          }
+
+          .btn-line:nth-child(1) {
+            top: 0;
+          }
+
+          .btn-line:nth-child(2) {
+            top: 20px;
+          }
+
+          .btn-line:nth-child(3) {
+            top: 20px;
+          }
+
+          .btn-line:nth-child(4) {
+            top: 40px;
+          }
+        }
+
+        .phone {
+          text-align: center;
+        }
+      }
+
+      .menu-open {
+        .btn-line:nth-child(1) {
+          transform: scaleX(0);
+        }
+
+        .btn-line:nth-child(2) {
+          transform: rotate(45deg);
+        }
+
+        .btn-line:nth-child(3) {
+          transform: rotate(-45deg);
+        }
+
+        .btn-line:nth-child(4) {
+          transform: scaleX(0);
+        }
+
+        .menu {
+          transform: translateY(0%);
+        }
+      }
+    }
+  }
+
   .new {
     .container {
       .new-info {
@@ -29,6 +152,19 @@
           max-width: 100%;
         }
       }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .main {
+    .headline,
+    .new {
+      padding: 50px 0;
+    }
+
+    .color {
+      padding-bottom: 50px;
     }
   }
 }
@@ -52,6 +188,44 @@
     .color-title {
       font-size: 28px;
       line-height: 32px;
+    }
+
+    .color {
+      .container {
+        .color-list {
+          .color-item {
+            width: 100%;
+
+            img {
+              width: 100%;
+            }
+          }
+        }
+      }
+    }
+
+    .contacts {
+      .container {
+        .contacts-inner {
+          .contacts-form {
+            padding: 50px 70px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 375px) {
+  .main {
+    .contacts {
+      .container {
+        .contacts-inner {
+          .contacts-form {
+            padding: 50px 10px;
+          }
+        }
+      }
     }
   }
 }
